--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,7 +37,8 @@
             "tsx": "never"
         }], // eslint gets into a fight with ts about imports otherwise
         "no-unused-vars": "off", //so that prop function parameters can be typed
-        "@typescript-eslint/no-unused-vars": "error" //so that props on interface functions can be typed
+        "@typescript-eslint/no-unused-vars": "error", //so that props on interface functions can be typed
+        "import/no-extraneous-dependencies": ["error", {"devDependencies": ["**/*.test.ts","**/*.test.tsx"]}] //test dependencies should be in devdependencies
     },
     "settings": {
         "import/resolver": {
