--- a/package.json
+++ b/package.json
@@ -88,6 +88,9 @@
     ]
   },
   "jest": {
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ],
     "roots": [
       "<rootDir>/src"
     ],
@@ -144,8 +147,12 @@
     ]
   },
   "devDependencies": {
+    "@types/enzyme": "^3.10.11",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
+    "enzyme": "^3.11.0",
+    "enzyme-to-json": "^3.6.2",
     "eslint": "^8.8.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.25.4",
